<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racecar_mn</name>
  <version>2.0.0</version>
  <description>
    A set of base programs for the racecar_mn.
  </description>
  <maintainer email="fishberg@mit.edu">Andrew Fishberg</maintainer>
  <license>MIT</license>  

  <buildtool_depend> ament_python </buildtool_depend>
  
  <depend>ackermann_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
